# project-cdhw

./: .env  .gitignore  README.md  app.py  main.py  network.html  pyproject.toml  rideshare.html  tnp_2025.py
census_data/: fetch_census_data.py
data/cta_stations/: CTA_RailStations.shp.xml
data/processed/: acs5_2024_il_tract_clean.csv  ca_trip_totals.csv  community_area_census.csv  community_areas.geojson  community_areas.json  cta_commarea_annual_2024.csv  cta_commarea_monthly_2024.csv  cta_station_crosswalk_2024.csv  cta_station_locations_clean.csv  cta_station_locations_rail_clean.csv  cta_station_manual_review_2024.csv  cta_station_match_candidates_2024.csv  to_delete.py  (+9 more)
docs/: final_milestone.md
documents/: data_flow_diagram.dot  data_flow_diagram.mmd  final_milestone.md  milestone2.md  project_structure_diagram.dot  project_structure_diagram.mmd  project_structure_report.md
milestones/: milestone1.md  milestone2.md
process/: data_reconciliation.md  join_data_for_dash.py
project_cdhw/: app.py
src/: api_client.py
tests/: conftest.py  test_aggregate_tract_to_ca.py  test_api_client.py  test_cta_station_pipeline.py  test_fetch_scripts.py  test_join_data_for_dash.py  test_make_ca_geojson.py  test_rideshare_analysis.py  test_tract_features.py  test_tract_to_ca_crosswalk.py
visuals/: cta_altchart.py  cta_commarea_2024_choropleth.html  cta_commarea_choropleth.py  graph_vis.py  network.html  network_analysis.py  pydeck_map.py  pyvis_api.py  pyvis_demo.ipynb  pyvis_map.py  rideshare_3d_map.html  rideshare_geo_layout.html  rideshare_network.py  to_delete.py
(+63 files in other folders)
