[project]
name = "project-cdhw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
