[project]
name = "project-cdhw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "jellyfish>=1.2.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyvis>=0.3.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
